--- a/editor/package.json
+++ b/editor/package.json
@@ -12,7 +12,8 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "three-csg-ts": "^3.2.0"
   },
   "devDependencies": {
     "postcss": "^8",
